cicd/kustomize/minio/local/patches.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2021-03-17T02-33-02Z
        args:
        - server
        - /export
