cicd/kustomize/minio/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  rules:
    - host: minio.cicd.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: minio-svc
                port:
                  number: 9000
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /minio
            backend:
              service:
                name: minio-svc
                port:
                  number: 9000
